# clbench

./: CMakeLists.txt  LICENSE  README.md
cmake/: freeimage.cmake
doc/: opencl.md
src/: CMakeLists.txt  crop.cpp  hello_cl.cpp  image2d_filter.cpp  time_vector_add_cxx_api.cpp  utils.cpp  vector_add.cpp  vector_add_c_api.cpp  vector_add_cxx.cpp  vector_add_cxx_api.cpp
src/common/: CMakeLists.txt  cl_runtime.cpp  cl_runtime.h
src/examples/: CMakeLists.txt  crop.cpp  opencl_offical_demo.cpp  test_image2d_load_order.cpp  utils.cpp  utils.h  vector_add.cl  vector_add_cxx_api.cpp
test/: CMakeLists.txt  hello_gtest.cpp
